/*
  ~ Copyright 2016 Claymore Minds Limited and Niche Solutions (UK) Limited
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
*/

option java_package = "io.viewserver.messages.protobuf.dto";
option java_outer_classname = "OptionsMessage";

enum SortDirection {
    ASCENDING = 1;
    DESCENDING = 2;
}

enum FilterMode {
    TRANSPARENT = 1;
    FILTERING = 2;
    OPAQUE = 3;
}

enum SubscriptionFlags {
    SNAPSHOT_ONLY = 1;
}

message OptionsDto {
    message SortColumn {
        required string name = 1;
        optional SortDirection direction = 2;
    }
    required uint32 offset = 1;
    required uint32 limit = 2;
    optional string columnName = 3;
    repeated SortColumn columnsToSort = 4;
    optional FilterMode filterMode = 5;
    optional string filterExpression = 6;
    repeated SubscriptionFlags flags = 7;
}
